fix responsive and add new features like align text and padding

--- a/src/components/ContactMe/contactMeStyles.css
+++ b/src/components/ContactMe/contactMeStyles.css
@@ -1,154 +1,195 @@
 #contactMe {
-  min-height: 100vh;
-  min-width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: #d285e5;
+	min-height: 100vh;
+	min-width: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background-color: #d285e5;
 }
 
 .contactMe__container {
-  display: grid;
-  grid-template-columns: 2fr 1fr;
-  width: 85vw;
-  margin: 0 auto;
+	display: grid;
+	grid-template-columns: 2fr 1fr;
+	width: 85vw;
+	margin: 0 auto;
 }
 
 .contactMe__information {
-  margin-bottom: 20px;
-  padding: 20px;
+	margin-bottom: 20px;
+	padding: 20px;
 }
 
 .contactMe__information div h3 {
-  font-size: 2.1rem;
-  margin-bottom: 10px;
+	font-size: 2.1rem;
+	margin-bottom: 10px;
 }
 
 .contactMe__information div p {
-  font-size: 1.6rem;
-
+	font-size: 1.6rem;
 }
 
 .icon {
-  font-size: 2rem;
-  color: #49005c;
-  display: flex;
-  align-items: center;
-  margin-right: 20px;
+	font-size: 2rem;
+	color: #49005c;
+	display: flex;
+	align-items: center;
+	margin-right: 20px;
 }
 
 .contactMe__information hr {
-  margin-top: 15px;
-  margin-bottom: 15px;
-  border: 1px solid #49005c;
-  opacity: .5;
+	margin-top: 15px;
+	margin-bottom: 15px;
+	border: 1px solid #49005c;
+	opacity: 0.5;
 }
 
 .container__icon {
-  display: flex;
-  align-items: center;
-  margin-top: 10px;
-  margin-bottom: 20px;
-  font-size: 2rem;
+	display: flex;
+	align-items: center;
+	margin-top: 10px;
+	margin-bottom: 20px;
+	font-size: 2rem;
+}
+
+.container__icon a {
+	font-size: 1.6rem;
 }
 
 .contactMe__form {
-  padding: 20px;
+	padding: 20px;
 }
 
 .contactMe__form h2 {
-  font-size: 3rem;
-  margin-bottom: 10px;
+	font-size: 3rem;
+	margin-bottom: 10px;
 }
 
 .contactMe__form p {
-  font-size: 1.5rem;
-  width: 50vw;
+	font-size: 1.5rem;
+	width: 50vw;
+	margin-bottom: 15px;
+	text-align: justify;
 }
 
 .contactMe__form hr {
-  height: 3px;
-  background-color: #000000;
-  border: 1px solid #49005c;
-  opacity: .5;
-  width: 8vw;
-  margin-bottom: 20px;
+	height: 3px;
+	background-color: #000000;
+	border: 1px solid #49005c;
+	opacity: 0.5;
+	width: 8vw;
+	margin-bottom: 20px;
 }
 
 form {
-  padding: 10px;
-  gap: 20px;
+	padding: 10px;
+	display: flex;
+	flex-direction: column;
+	gap: 5px;
 }
 
 form input {
-  padding: 10px 20px;
-  border-radius: 6px;
-  width: 50%;
-  outline: none;
-  border: .5px solid #00000050;
-  margin-bottom: 10px;
-  margin-right: 10px;
+	padding: 10px 20px;
+	border-radius: 6px;
+	width: 50%;
+	outline: none;
+	border: 0.5px solid #00000050;
+	margin-bottom: 10px;
 }
 
 form div {
-  display: flex;
+	display: flex;
 }
 
 form textarea {
-  resize: none;
-  padding: 15px;
-  outline: none;
-  border: 1px solid #00000050;
-  border-radius: 6px;
+	resize: none;
+	padding: 15px;
+	outline: none;
+	border: 1px solid #00000050;
+	border-radius: 6px;
+	width: 100%;
+	font-family: 'Roboto Slab', serif;
 }
 
-form textarea::placeholder {
-  font-family: 'Roboto Slab', serif;
+form textarea::placeholder,
+form input::placeholder {
+	font-family: 'Roboto Slab', serif;
 }
 
 form button {
-  display: block;
-  margin: 25px 0 0;
-  padding: 10px 20px;
-  border-radius: 6px;
-  outline: none;
-  border: 1px solid #49005c;
-  background-color: #49005c;
-  color: white;
-  cursor: pointer;
-  box-shadow: 3px 3px 3px #000;
-  transition-property: background, color;
-  transition-duration: .5s;
+	display: block;
+	width: 150px;
+	margin: 25px 0 0;
+	padding: 10px 20px;
+	border-radius: 6px;
+	outline: none;
+	border: 1px solid #49005c;
+	background-color: #49005c;
+	color: white;
+	cursor: pointer;
+	box-shadow: 3px 3px 3px #000;
+	transition-property: background-color, color;
+	transition-duration: 0.5s;
+}
+
+@media (max-width: 768px) {
+	form button {
+		margin: 25px auto;
+	}
 }
 
 form button:hover {
-  background: #fff;
-  color: #000;
-  border-color: #fff;
+	background-color: #fff;
+	color: #000;
+	border-color: #fff;
 }
 
 form button:active {
-  box-shadow: none;
-  transform: translateY(2px);
+	box-shadow: none;
+	transform: translateY(2px);
+}
+.container__1inputs {
+	display: flex;
+	gap: 5px;
+}
+.container__2inputs {
+	display: flex;
+	gap: 5px;
 }
 
+@media (max-width: 768px) {
+	.container__1inputs {
+		display: flex;
+		flex-direction: column;
+	}
+	.container__1inputs input {
+		width: 100%;
+	}
+
+	.container__2inputs {
+		display: flex;
+		flex-direction: column;
+	}
+	.container__2inputs input {
+		width: 100%;
+	}
+}
 .container__errors {
-  margin-top: 50px;
+	margin-top: 50px;
 }
 
 .text__error {
-  color: #49005c;
+	color: #49005c;
 }
 
-@media screen and (max-width: 720px) {
-  .contactMe__container {
-    margin-top: 100px;
-    grid-template-rows: 1fr 1fr;
-    grid-template-columns: none;
-  }
+@media screen and (max-width: 768px) {
+	.contactMe__container {
+		margin-top: 100px;
+		display: flex;
+		flex-direction: column;
+	}
 
-  .contactMe__form p {
-    width: 100%;
-    margin-bottom: 15px;
-  }
+	.contactMe__form p {
+		width: 100%;
+		margin-bottom: 15px;
+	}
 }
